feat: clinic servlet api

--- a/backend/src/main/webapp/WEB-INF/web.xml
+++ b/backend/src/main/webapp/WEB-INF/web.xml
@@ -22,7 +22,7 @@
 
     <servlet-mapping>
         <servlet-name>ClinicServlet</servlet-name>
-        <url-pattern>/clinic</url-pattern>
+        <url-pattern>/clinic/*</url-pattern>
     </servlet-mapping>
 
 </web-app>
