feat: auth servlet api

--- a/backend/src/main/webapp/WEB-INF/web.xml
+++ b/backend/src/main/webapp/WEB-INF/web.xml
@@ -8,21 +8,27 @@
         <servlet-name>helloServlet</servlet-name>
         <servlet-class>com.healthcaresystem.HelloServlet</servlet-class>
     </servlet>
-
     <servlet-mapping>
         <servlet-name>helloServlet</servlet-name>
         <url-pattern>/hello-servlet</url-pattern>
     </servlet-mapping>
 
-    <!-- New ClinicServlet configuration -->
     <servlet>
         <servlet-name>ClinicServlet</servlet-name>
         <servlet-class>com.healthcaresystem.controller.ClinicServlet</servlet-class>
     </servlet>
-
     <servlet-mapping>
         <servlet-name>ClinicServlet</servlet-name>
         <url-pattern>/clinic/*</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>AuthServlet</servlet-name>
+        <servlet-class>com.healthcaresystem.controller.AuthServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>AuthServlet</servlet-name>
+        <url-pattern>/auth/*</url-pattern>
     </servlet-mapping>
 
 </web-app>
